--- a/.github/workflows/ui-web-samples.yml
+++ b/.github/workflows/ui-web-samples.yml
@@ -12,5 +12,5 @@ jobs:
       - name: Install NPM dependencies
         run: npm ci
       - name: Build sample
-        run: npm run build
-        working-directory: ./ui-web/samples
+        run: ./ui-web/build-sample.ps1
+        shell: pwsh
