--- a/.github/workflows/api-python-samples.yml
+++ b/.github/workflows/api-python-samples.yml
@@ -11,12 +11,6 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install NPM dependencies
         run: npm ci
-      - name: Generate backend SDK
-        run: ./api-python/build-sdk.ps1
-        shell: pwsh
-      - name: Install dependencies
-        run: pip3 install -r requirements.txt
-        working-directory: ./api-python/samples
       - name: Build sample
-        run: python3 validate.py
-        working-directory: ./api-python/samples
+        run: ./api-python/build-sample.ps1
+        shell: pwsh
