--- a/.github/workflows/ui-flutter-action.yml
+++ b/.github/workflows/ui-flutter-action.yml
@@ -20,10 +20,10 @@ jobs:
         with:
           channel: stable
           flutter-version: 3.24.0
-      # - uses: actions/setup-java@v4
-      #   with:
-      #     distribution: 'temurin'
-      #     java-version: '21'
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
       - name: Setup credentials (todo investigate expiration)
         run: |
           mkdir -p $XDG_CONFIG_HOME/dart
@@ -38,9 +38,12 @@ jobs:
           EOF
       - name: Verify credentials
         run: cat $XDG_CONFIG_HOME/dart/pub-credentials.json
-      - name: Run Flutter Tests
+      - name: Run Flutter SDK Tests
         working-directory: ./ui-flutter/sdk
         run: flutter test
+      - name: Build Sample Android App
+        working-directory: ./ui-flutter/sample
+        run: flutter build apk
       - name: Publish SDK (dry run)
         working-directory: ./
         if: inputs.publish == false
