--- a/ui-flutter/samples/android/app/src/main/AndroidManifest.xml
+++ b/ui-flutter/samples/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="trinsic_flutter_ui_example"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -35,7 +37,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="trinsic-ui-example-redirect-scheme" />
+                <data android:scheme="trinsic-flutter-ui-example-redirect-scheme" />
             </intent-filter>
         </activity>
 
