--- a/ui-flutter/samples/pubspec.yaml
+++ b/ui-flutter/samples/pubspec.yaml
@@ -23,11 +23,12 @@ dependencies:
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
-    path: ../
+    path: ../sdk/
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.2.2
 
 dev_dependencies:
   integration_test:
