--- a/ui-flutter/samples/android/app/build.gradle
+++ b/ui-flutter/samples/android/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 android {
     namespace = "id.trinsic.trinsic_flutter_ui_example"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion = "25.1.8937393"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
