--- a/ui-flutter/samples/android/settings.gradle
+++ b/ui-flutter/samples/android/settings.gradle
@@ -8,7 +8,7 @@ pluginManagement {
     }()
 
     includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
-    includeBuild("D:/trinsic/connect-sdks/client/flutter/trinsic_flutter_ui/android/src")
+    includeBuild("../../sdk/android/src")
 
     repositories {
         google()
