--- a/.github/workflows/ui-android-samples.yml
+++ b/.github/workflows/ui-android-samples.yml
@@ -21,5 +21,5 @@ jobs:
         run: npm ci
       - name: Build sample
         run: |
-          cd ./ui-android/sample
+          cd ./ui-android/samples
           ./gradlew build
