--- a/.github/workflows/ui-android-samples.yml
+++ b/.github/workflows/ui-android-samples.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build_and_publish:
-    name: Build and Publish
+    name: Build Android Sample
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
