--- a/ui-react-native/sdk/example/android/app/build.gradle
+++ b/ui-react-native/sdk/example/android/app/build.gradle
@@ -126,7 +126,7 @@ if (isNewArchitectureEnabled()) {
     // Since our library doesn't invoke codegen automatically we need to do it here.
     tasks.register('invokeLibraryCodegen', Exec) {
         workingDir "$rootDir/../../"
-        commandLine "yarn", "bob", "build", "--target", "codegen"
+        commandLine "npm", "run-script", "bob", "build", "--target", "codegen"
     }
     preBuild.dependsOn invokeLibraryCodegen
 }
