--- a/.github/workflows/ui-react-native-action.yml
+++ b/.github/workflows/ui-react-native-action.yml
@@ -19,6 +19,11 @@ jobs:
           submodules: recursive
       - name: Install NPM dependencies
         run: npm ci
+      - name: Set up Xcode
+        run: sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
+      - name: Install Dependencies
+        run: xcodebuild -resolvePackageDependencies -project iOS.xcodeproj
+        working-directory: ui-swift/samples/iOS
       - name: Generate ui react native SDK
         run: ./ui-react-native/build-sdk.ps1
         shell: pwsh
