--- a/ui-react-native/sdk/package.json
+++ b/ui-react-native/sdk/package.json
@@ -5,8 +5,10 @@
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.js",
   "module": "./lib/module/index.js",
+  "types": "./lib/typescript/module/src/index.d.ts",
   "exports": {
     ".": {
+      "types": "./lib/typescript/module/src/index.d.ts",
       "import": {
         "types": "./lib/typescript/module/src/index.d.ts",
         "default": "./lib/module/index.js"
