--- a/ui-web/sdk/package.json
+++ b/ui-web/sdk/package.json
@@ -2,6 +2,11 @@
   "name": "@trinsic/web-ui",
   "version": "0.0.1",
   "description": "Trinsic's Web UI SDK to easily launch your verifications and capture the result",
+  "author": "Trinsic",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/trinsic-id/sdk"
+  },
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "browser": "dist/index.js",
@@ -9,13 +14,13 @@
     "build": "esbuild src/index.ts --bundle --minify --sourcemap --format=esm --outdir=dist --target=chrome58,firefox57,safari11,edge16",
     "postbuild": "tsc src/index.ts --declaration --emitDeclarationOnly --lib es2015,dom --outDir dist"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "esbuild": "0.23.0",
     "typescript": "5.5.4"
   },
   "dependencies": {
     "micromodal": "0.4.10"
-  }
+  },
+  "homepage": "https://trinsic.id",
+  "license": "MIT"
 }
