Git release concurrency

--- a/.github/workflows/api-java-release.yml
+++ b/.github/workflows/api-java-release.yml
@@ -7,6 +7,8 @@ jobs:
   release:
     name: Publish Java Package
     uses: ./.github/workflows/api-java-action.yml
+    concurrency:
+      group: git-release
     with:
       publish: true
     secrets: inherit
