--- a/.github/workflows/api-php-release.yml
+++ b/.github/workflows/api-php-release.yml
@@ -7,6 +7,8 @@ jobs:
   release:
     name: Publish PHP Package
     uses: ./.github/workflows/api-php-action.yml
+    concurrency:
+      group: git-release
     with:
       publish: true
     secrets: inherit
