--- a/.github/workflows/api-go-release.yml
+++ b/.github/workflows/api-go-release.yml
@@ -10,6 +10,8 @@ jobs:
   release:
     name: Publish Go Package
     uses: ./.github/workflows/api-go-action.yml
+    concurrency:
+      group: git-release
     with:
       publish: true
     secrets: inherit
