--- a/.github/workflows/ui-android-release.yml
+++ b/.github/workflows/ui-android-release.yml
@@ -7,6 +7,8 @@ jobs:
   release:
     name: Publish Android Package
     uses: ./.github/workflows/ui-android-action.yml
+    concurrency:
+      group: git-release
     with:
       publish: true
     secrets: inherit
