--- a/.github/workflows/ui-swift-release.yml
+++ b/.github/workflows/ui-swift-release.yml
@@ -7,6 +7,8 @@ jobs:
   release:
     name: Publish
     runs-on: macos-latest
+    concurrency:
+      group: git-release
     steps:
       - uses: actions/checkout@v4
         with:
