--- a/api-php/samples/composer.json
+++ b/api-php/samples/composer.json
@@ -10,6 +10,6 @@
     "slim/slim": "^4.14",
     "slim/psr7": "^1.7",
     "vlucas/phpdotenv": "^5.6",
-    "trinsic/api": "*"
+    "trinsic/api": "0.6.1"
   }
 }
