--- a/api-typescript/samples/package.json
+++ b/api-typescript/samples/package.json
@@ -11,14 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.3.0",
+    "@types/node": "22.3.0",
     "nodemon": "3.1.4",
     "ts-node": "10.9.2",
-    "ts-node-dev": "^2.0.0",
+    "ts-node-dev": "2.0.0",
     "typescript": "5.5.4"
   },
   "dependencies": {
-    "@trinsic/api": "^0.4.0",
+    "@trinsic/api": "0.6.1",
     "express": "4.19.2"
   }
 }
