--- a/api-ruby/samples/Gemfile
+++ b/api-ruby/samples/Gemfile
@@ -1,8 +1,13 @@
-# Gemfile
 source 'https://rubygems.org'
 
 gem 'dotenv', groups: [:development, :test]
 gem 'httparty'        # HTTP requests
-gem 'sinatra'
+gem 'sinatra', '~> 3.2.0'
 gem 'sinatra-contrib' # For JSON support, etc.
 gem 'trinsic_api'     # Trinsic API client
+gem 'rack', '~> 2.2.6' # Force a compatible version of Rack
+
+group :test do
+  gem 'minitest'
+  gem 'rack-test'
+end
