--- a/.github/workflows/api-ruby-samples.yml
+++ b/.github/workflows/api-ruby-samples.yml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.3"
+          bundler-cache: true
       - name: Install NPM dependencies
         run: npm ci
       - name: Build sample
