--- a/.github/workflows/ui-flutter-action.yml
+++ b/.github/workflows/ui-flutter-action.yml
@@ -43,7 +43,11 @@ jobs:
         run: flutter test
       - name: Build Sample Android App
         working-directory: ./ui-flutter/samples
-        run: flutter build apk
+        run: |
+          sed -i 's/  trinsic_flutter_ui: \^[0-9.]*$/  trinsic_flutter_ui:/' pubspec.yaml
+          sed -i 's|    # path: \.\./sdk/$|    path: ../sdk/|' pubspec.yaml
+          cat pubspec.yaml
+          flutter build apk
       - name: Publish SDK (dry run)
         working-directory: ./
         if: inputs.publish == false
