--- a/.github/workflows/_pr-validate.yml
+++ b/.github/workflows/_pr-validate.yml
@@ -1,7 +1,6 @@
 name: PR Validation
 
 on:
-  workflow_dispatch:
   pull_request:
 
 jobs:
@@ -85,11 +84,21 @@ jobs:
     name: Validate UI Android Samples
     uses: ./.github/workflows/ui-android-samples.yml
     secrets: inherit
-  ui-flutter:
-    name: Validate UI Flutter SDK
+  ui-flutter-local:
+    if: "!contains(github.event.pull_request.changed_files, './ui-flutter/sample/pubspec.yaml')"
+    name: Validate UI Flutter SDK & Sample (Local Library)
     uses: ./.github/workflows/ui-flutter-action.yml
     with:
       publish: false
+      local: true
+    secrets: inherit
+  ui-flutter-published:
+    if: "contains(github.event.pull_request.changed_files, './ui-flutter/sample/pubspec.yaml')"
+    name: Validate UI Flutter SDK & Sample (Published Library)
+    uses: ./.github/workflows/ui-flutter-action.yml
+    with:
+      publish: false
+      local: false
     secrets: inherit
   ui-react-native:
     name: Validate UI React Native SDK
