--- a/.github/workflows/ui-flutter-action.yml
+++ b/.github/workflows/ui-flutter-action.yml
@@ -8,11 +8,6 @@ on:
         required: false
         default: false
         description: "Publish the package, default is false"
-      local:
-        type: boolean
-        required: false
-        default: true
-        description: "Use local library for sample build, default is true"
 
 jobs:
   build_and_publish:
@@ -20,6 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v45
+        with:
+          files_yaml: |
+            sample_pubspec:
+              - ui-flutter/samples/pubspec.yaml
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -47,12 +49,12 @@ jobs:
         working-directory: ./ui-flutter/sdk
         run: flutter test
       - name: Build Sample Android App (Local Library)
-        if: inputs.local == true
+        if: "steps.changed-files.outputs.sample_pubspec == 'true' || inputs.publish == 'true'"
         working-directory: ./ui-flutter
         run: ./build-sample.ps1 -useLocalLibrary
         shell: pwsh
       - name: Build Sample Android App (Published Library)
-        if: inputs.local == false
+        if: "steps.changed-files.outputs.sample_pubspec == 'false' && inputs.publish == 'false'"
         working-directory: ./ui-flutter
         run: ./build-sample.ps1
         shell: pwsh
