Print all files

--- a/.github/workflows/ui-flutter-action.yml
+++ b/.github/workflows/ui-flutter-action.yml
@@ -22,6 +22,13 @@ jobs:
           files_yaml: |
             sample_pubspec:
               - ui-flutter/samples/pubspec.yaml
+      - name: List all changed files
+        env:
+          ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
+        run: |
+          for file in ${ALL_CHANGED_FILES}; do
+            echo "$file was changed"
+          done
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
