--- a/.github/workflows/ui-flutter-action.yml
+++ b/.github/workflows/ui-flutter-action.yml
@@ -54,7 +54,7 @@ jobs:
         run: ./build-sample.ps1 -useLocalLibrary
         shell: pwsh
       - name: Build Sample Android App (Published Library)
-        if: steps.changed-files.outputs.sample_pubspec_any_changed == 'true' && inputs.publish == 'false'
+        if: steps.changed-files.outputs.sample_pubspec_any_changed == 'true' && inputs.publish != 'true'
         working-directory: ./ui-flutter
         run: ./build-sample.ps1
         shell: pwsh
