--- a/.github/workflows/_pr-validate.yml
+++ b/.github/workflows/_pr-validate.yml
@@ -18,6 +18,7 @@ jobs:
       ui-android: ${{ steps.changed-files.outputs.ui-android_any_changed }}
       ui-flutter: ${{ steps.changed-files.outputs.ui-flutter_any_changed }}
       ui-react-native: ${{ steps.changed-files.outputs.ui-react-native_any_changed }}
+      ui-swift: ${{ steps.changed-files.outputs.ui-swift_any_changed }}
       ui-web: ${{ steps.changed-files.outputs.ui-web_any_changed }}
     steps:
       - uses: actions/checkout@v4
@@ -50,6 +51,8 @@ jobs:
               - ui-flutter/**
             ui-react-native:
               - ui-react-native/**
+            ui-swift:
+              - ui-swift/**
             ui-web:
               - ui-web/**
   api-csharp:
@@ -166,6 +169,12 @@ jobs:
     with:
       publish: false
     secrets: inherit
+  ui-swift-samples:
+      name: Validate UI Swift Samples
+      needs: pre-check
+      if: ${{ needs.pre-check.outputs.ui-swift == 'true' }}
+      uses: ./.github/workflows/ui-swift-samples.yml
+      secrets: inherit
   ui-web:
     name: Validate UI Web SDK
     needs: pre-check
