--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,39 +4,16 @@
   "gitAuthor": "mewmba Renovate Bot <mewmba@trinsic.id>",
   "repositories": ["trinsic-id/sdk"],
   "prHourlyLimit": 0,
-  "packageRules": [
-    {
-      "matchPackageNames": ["Trinsic.Api"],
-      "groupName": "C# - Trinsic.Api dependency"
-    },
-    {
-      "matchPackageNames": ["github.com/trinsic-id/sdk-go-api"],
-      "groupName": "Go - github.com/trinsic-id/sdk-go-api dependency"
-    },
-    {
-      "matchPackageNames": ["com.github.trinsic-id:sdk-java-api"],
-      "groupName": "Java - com.github.trinsic-id:sdk-java-api dependency",
-      "registryUrls": ["https://jitpack.io"]
-    },
-    {
-      "matchPackageNames": ["trinsic/api"],
-      "groupName": "PHP - trinsic/api dependency"
-    },
-    {
-      "matchPackageNames": ["trinsic_api"],
-      "groupName": "Python - trinsic_api dependency"
-    },
-    {
-      "matchPackageNames": ["trinsic_api"],
-      "groupName": "Ruby - trinsic_api dependency"
-    },
-    {
-      "matchPackageNames": ["@trinsic/api"],
-      "groupName": "TypeScript - @trinsic/api dependency"
-    },
-    {
-      "matchPackageNames": ["@trinsic/web"],
-      "groupName": "TypeScript Web - @trinsic/web dependency"
-    }
+  "includePaths": [
+    ".github/renovate.json",
+    "api-csharp/samples/**",
+    "api-go/samples/**",
+    "api-java/samples/**",
+    "api-php/samples/**",
+    "api-python/samples/**",
+    "api-php/samples/**",
+    "api-ruby/samples/**",
+    "api-typescript/samples/**",
+    "ui-web/samples/**"
   ]
 }
