--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -41,5 +41,25 @@
     "github.com/gofiber/fiber/v2",
     "github.com/joho/godotenv",
     "DotNetEnv"
-  ]
+  ],
+  "npm": {
+    "enabled": true
+  },
+  "packageRules": [
+    {
+      "description": "Update npm workspace dependencies and lockfile at root",
+      "matchPaths": ["ui-web/samples/**", "api-typescript/samples/**"],
+      "matchManagers": ["npm"],
+      "matchPackagePatterns": ["*"],
+      "updateTypes": ["minor", "patch"],
+      "commitMessage": "chore(deps): update workspace dependencies in ui-web/samples and api-typescript/samples",
+      "depTypeList": ["dependencies", "devDependencies"],
+      "prPriority": 1,
+      "recreateWhen": "always"
+    }
+  ],
+  "lockFileMaintenance": {
+    "enabled": true,
+    "schedule": ["before 6am on the first day of the month"]
+  }
 }
