--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,39 +3,11 @@
   "branchPrefix": "mewmba/renovate/",
   "gitAuthor": "mewmba Renovate Bot <mewmba@trinsic.id>",
   "repositories": ["trinsic-id/sdk"],
+  "additionalBranchPrefix": "{{manager}}-",
+  "groupName": "all {{manager}} dependencies",
+  "groupSlug": "all",
+  "assignees": ["lucasamonrc"],
+  "reviewers": ["lucasamonrc"],
   "prHourlyLimit": 0,
-  "recreateWhen": "always",
-  "ignorePaths": [
-    "**/sdk/**",
-    "ui-android/**",
-    "ui-flutter/**",
-    "ui-react-native/**",
-    "ui-swift/**"
-  ],
-  "ignoreDeps": [
-    "vite",
-    "express",
-    "@types/node",
-    "nodemon",
-    "ts-node",
-    "ts-node-dev",
-    "typescript",
-    "dotenv",
-    "httparty",
-    "sinatra",
-    "sinatra-contrib",
-    "rack",
-    "rack-test",
-    "minitest",
-    "slim/slim",
-    "slim/psr7",
-    "vlucas/phpdotenv",
-    "io.javalin:javalin",
-    "org.slf4j:slf4j-simple",
-    "io.github.cdimascio:dotenv-java",
-    "github.com/gofiber/fiber/v2",
-    "github.com/joho/godotenv",
-    "DotNetEnv",
-    "@openapitools/openapi-generator-cli"
-  ]
+  "recreateWhen": "always"
 }
