Add first version of Expo UI library

--- a/.github/workflows/_pr-validate.yml
+++ b/.github/workflows/_pr-validate.yml
@@ -84,6 +84,12 @@ jobs:
     name: Validate UI Android Samples
     uses: ./.github/workflows/ui-android-samples.yml
     secrets: inherit
+  ui-expo:
+    name: Validate UI Expo SDK
+    uses: ./.github/workflows/ui-expo-action.yml
+    with:
+      publish: false
+    secrets: inherit
   ui-flutter:
     name: Validate UI Flutter SDK & Sample
     uses: ./.github/workflows/ui-flutter-action.yml
