--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,11 +11,43 @@
   "prHourlyLimit": 0,
   "recreateWhen": "always",
   "ignorePaths": [
-    "**/sdk/**",
     "ui-android/**",
     "ui-flutter/**",
     "ui-react-native/**",
     "ui-swift/**",
     "swift/**"
+  ],
+  "ignoreDeps": [
+    "@openapitools/openapi-generator-cli",
+    "esbuild",
+    "typescript",
+    "micromodal",
+    "vite",
+    "@types/node",
+    "nodemon",
+    "ts-node",
+    "ts-node-dev",
+    "dotenv",
+    "httparty",
+    "sinatra",
+    "sinatra-contrib",
+    "trinsic_api",
+    "rack",
+    "minitest",
+    "rack-test",
+    "fastapi",
+    "pydantic",
+    "load_dotenv",
+    "uvicorn",
+    "slim/slim",
+    "slim/psr7",
+    "vlucas/phpdotenv",
+    "trinsic/api",
+    "io.javalin:javalin",
+    "org.slf4j:slf4j-simple",
+    "io.github.cdimascio:dotenv-java",
+    "github.com/gofiber/fiber/v2",
+    "github.com/joho/godotenv",
+    "DotNetEnv"
   ]
 }
