--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,8 +4,8 @@
   "gitAuthor": "mewmba Renovate Bot <mewmba@trinsic.id>",
   "repositories": ["trinsic-id/sdk"],
   "additionalBranchPrefix": "{{manager}}-",
-  "groupName": "all {{manager}} dependencies",
-  "groupSlug": "all",
+  "groupName": "trinsic sdk {{manager}} dependencies",
+  "groupSlug": "trinsic sdk",
   "assignees": ["lucasamonrc"],
   "reviewers": ["lucasamonrc"],
   "prHourlyLimit": 0,
@@ -23,6 +23,7 @@
     "typescript",
     "micromodal",
     "vite",
+    "express",
     "@types/node",
     "nodemon",
     "ts-node",
