--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -2,10 +2,10 @@ name: "Renovate Bot"
 on:
   workflow_dispatch:
 
-  pull_request:
-    paths:
-      - ".github/workflows/renovate.yaml"
-      - ".github/renovate.json"
+  # pull_request:
+  #   paths:
+  #     - ".github/workflows/renovate.yaml"
+  #     - ".github/renovate.json"
 
 jobs:
   renovate_runner:
