--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ui-web/samples",
     "ui-react-native/sdk",
     "ui-react-native/sdk/example",
-    "ui-expo/sdk"
+    "ui-expo/sdk",
+    "ui-expo/samples/expo-sample"
   ],
   "name": "trinsic-sdks",
   "version": "0.3.0",
